# backend-projects

./: README.md
core/: manager.py  settings.py
task-tracker/: .gitignore  pyproject.toml
task-tracker/core/: task_cli.py
task-tracker/tests/: test_cli.py
tests/: test_manager.py
