[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "task-tracker"
version = "0.1.0"
authors = [
    { name = "Dang Vo Nguyen" }
]
description = "A CLI application to track and manage your tasks."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "tabulate>=0.9,<0.10",
    "pytest>=8.0,<9.0",
]

[project.scripts]
task-cli = "core.task_cli:main"

[tool.setuptools]
packages = ["core"]
